Compiling and matching.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "regir"
+name = "iregex"
 description = "Intermediate representation for Regular Expressions."
 categories = ["text-processing"]
 readme = "README.md"
-documentation = "https://docs.rs/ere"
+documentation = "https://docs.rs/iregex"
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -14,7 +14,7 @@ version.workspace = true
 [workspace.package]
 authors = ["Timothée Haudebourg <timothee@haudebourg.net>"]
 license = "MIT/Apache-2.0"
-repository = "https://github.com/timothee-haudebourg/ere-rs"
+repository = "https://github.com/timothee-haudebourg/iregex-rs"
 edition = "2021"
 rust-version = "1.66.1"
 version = "0.1.0"
@@ -23,9 +23,9 @@ version = "0.1.0"
 members = ["crates/*"]
 
 [workspace.dependencies]
-regir-automata = { version = "0.1.0", path = "crates/automata" }
-regir-syntax = { version = "0.1.0", path = "crates/syntax" }
+iregex-automata = { version = "0.1.0", path = "crates/automata" }
+iregex-syntax = { version = "0.1.0", path = "crates/syntax" }
 thiserror = "1.0.57"
 
 [dependencies]
-regir-automata.workspace = true
+iregex-automata.workspace = true
