--- a/crates/automata/Cargo.toml
+++ b/crates/automata/Cargo.toml
@@ -17,6 +17,7 @@ dot = []
 
 [dependencies]
 thiserror.workspace = true
+educe.workspace = true
 btree-range-map = "0.7.2"
 range-traits = "0.3.2"
 mown = "1.0"
