--- a/crates/automata/Cargo.toml
+++ b/crates/automata/Cargo.toml
@@ -4,7 +4,7 @@ description = "Finite automata definitions for the `iregex` crate."
 keywords = ["regex", "dfa", "automata", "automaton", "nfa"]
 categories = ["text-processing"]
 readme = "README.md"
-documentation = "https://docs.rs/ere-automata"
+documentation = "https://docs.rs/iregex-automata"
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
